# jzero-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/jzero/: Cargo.toml
crates/jzero-ast/: Cargo.toml
crates/jzero-ast/src/: lib.rs  tree.rs
crates/jzero-cli/: Cargo.toml
crates/jzero-cli/src/: main.rs
crates/jzero-codegen/: Cargo.toml
crates/jzero-codegen/src/: address.rs  byc.rs  bytecode.rs  context.rs  emit.rs  gencode.rs  j0file.rs  labels.rs  layout.rs  lib.rs  pipeline.rs  tac.rs  tests.rs
crates/jzero-lexer/: Cargo.toml
crates/jzero-lexer/src/: lib.rs  token.rs
crates/jzero-parser/: Cargo.toml  build.rs
crates/jzero-parser/src/: action.rs  jzero.lalrpop  jzero.y  lexer.rs  lib.rs  loc.rs
crates/jzero-semantic/: Cargo.toml
crates/jzero-semantic/src/: builder.rs  calctype.rs  checktype.rs  error.rs  lib.rs  mkcls.rs  tests.rs  typeinit.rs
crates/jzero-symtab/: Cargo.toml
crates/jzero-symtab/src/: entry.rs  lib.rs  predef.rs  symtab.rs  typeinfo.rs
crates/jzero-vm/: Cargo.toml
crates/jzero-vm/src/: lib.rs  machine.rs  runtime.rs
crates/jzero/src/: lib.rs
tests/: concat.java  hello.java.dot  hello_loop.j0  hello_loop.java  hello_loop.java.dot
tests/examples/: countdown.java  fibonacci.java  fizzbuzz.java  greet.java  hello.java
