[workspace]
resolver = "2"
members = [
    "crates/jzero-lexer",
    "crates/jzero-parser"
]

[workspace.package]
name = "jzero"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
logos = { version = "0.16" }
cfgrammar = { version = "0.14" }
lrpar = { version = "0.14" }
lrlex = { version = "0.14" }