[workspace]
resolver = "2"
members = [
    "crates/jzero-lexer",
    "crates/jzero-parser",
    "crates/jzero-ast",
    "crates/jzero-cli",
]

[workspace.package]
name = "jzero"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
logos = { version = "0.16" }
lalrpop-util = "0.23"
lalrpop = "0.23"