[package]
name = "jzero-semantic"
license = "MIT"
repository = "https://github.com/jafar75/jzero-rs"
description = "Semantic analysis and type checking for the Jzero compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
jzero-ast    = { path = "../jzero-ast", version = "0.1.0" }
jzero-symtab = { path = "../jzero-symtab", version = "0.1.0" }

[dev-dependencies]
jzero-parser = { path = "../jzero-parser", version = "0.1.0" }
jzero-symtab = { path = "../jzero-symtab", version = "0.1.0" }