[package]
name    = "jzero"
license = "MIT"
repository = "https://github.com/jafar75/jzero-rs"
version = "0.1.2"
edition = "2024"
description = "A compiler and bytecode VM for the Jzero language (a subset of Java)"
keywords    = ["compiler", "bytecode", "interpreter", "language", "jzero"]
categories  = ["compilers"]
readme = "../../README.md"

[dependencies]
jzero-ast      = { path = "../jzero-ast", version = "0.1.0" }
jzero-parser   = { path = "../jzero-parser", version = "0.1.0" }
jzero-semantic = { path = "../jzero-semantic", version = "0.1.0" }
jzero-codegen  = { path = "../jzero-codegen", version = "0.1.1" }
jzero-vm       = { path = "../jzero-vm", version = "0.1.1" }